<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ViewSwitcher
            android:id="@+id/switcher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:animateFirstView="true"
            android:inAnimation="@anim/activity_open_enter"
            android:outAnimation="@anim/activity_close_exit">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/noActiveOrders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="64dp"
                android:text="@string/no_active_orders"
                android:textAppearance="?android:textAppearanceMedium" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/orderCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/collecting">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textAppearance="?android:textAppearanceMedium"
                        tools:text="Order №222" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/collect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/start_collecting"
                        android:textColor="?android:textColorPrimary" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </com.google.android.material.card.MaterialCardView>

        </ViewSwitcher>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/ordersQueueCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switcher"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:alpha="0"
            android:visibility="gone"
            app:cardBackgroundColor="@color/orders_queue"
            app:cardCornerRadius="3dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/ordersQueue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:textColor="?android:textColorPrimary"
                tools:text="2 orders in queue" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/inventory"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_above="@+id/pause"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/inventory"
            android:text="@string/inventory" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/pause"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/pause"
            android:text="@string/pause"
            app:icon="@drawable/ic_baseline_pause_24"
            app:iconGravity="textStart" />

    </RelativeLayout>

</layout>